[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MLflowcat"
version = "0.0.1"
authors = [
    { name="Alex Gregory" }
]
description = "Package for printing mlflow runs to the terminal"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
    "Homepage" = "https://github.com/Alex-JG3/mlflowcat"
    "Bug Tracker" = "https://github.com/Alex-JG3/mlflowcat/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

